--- a/about/index.html
+++ b/about/index.html
@@ -79,6 +79,10 @@ Currently, I am studying in the international department of my school in China. 
           <a class="nav-link" href="https://www.instagram.com/oliline_wang/">Instagram</a>
         </li>
       
+        <li class="nav-item">
+          <a class="nav-link" href="https://weibo.com/u/1907386482">Sina Weibo</a>
+        </li>
+      
     </ul>
     <hr class="hidden-md-up" />
   </div>
@@ -93,9 +97,8 @@ Currently, I am studying in the international department of my school in China. 
 
 
 
-<p>Currently, I am studying in the international department of my school in China. In the future, I will go to Canada for my university education.</p>
-<p>I love modern technology, and I self-learned programing language Python. I built this website with the theme from <a href="https://github.com/sharvaridesai/hexo-theme-edinburgh" target="_blank" rel="noopener">hexo</a> and great help from my classmate Chen Bolan.</p>
-<p>I like taking photographs, and this website serves to show my photographs and ideas to the whole world.</p>
+<h5>Currently, I am studying in the international department of my school in China. In the future, I will go to Canada for my university education.<br><br>I love modern technology, and I self-learned programing language Python. I built this website with the theme from <a href="https://github.com/sharvaridesai/hexo-theme-edinburgh" target="_blank" rel="noopener">hexo</a> and great help from my classmate Chen Bolan.<br><br>I like taking photographs, and this website serves to show my photographs and ideas to the whole world.<br><br>I was the president of my school photography club from 2017 to 2018, good at taking event photography and landscape.</h5>
+
 <p><br></p>
 <h6><i>If you want to use any images on this website for your pleasure(e.g. wallpaper), feel free to download. If you use them for any advertisement or commercially, please contact me.</i></h6>
 
