--- a/contact/index.html
+++ b/contact/index.html
@@ -18,10 +18,13 @@
       <meta name="description" content="Email Me
 
 
-I am welcome to any commercial work. Want any nice, cool, customized images? Just email me.
+I am welcome to any work. Want any nice, cool, customized images for website? Just email me.
 
 
-If you want to use any images on this website">
+Event photography? Just email me.
+
+
+Can’t wa">
   
 
   <!--Author-->
@@ -80,6 +83,10 @@ If you want to use any images on this website">
           <a class="nav-link" href="https://www.instagram.com/oliline_wang/">Instagram</a>
         </li>
       
+        <li class="nav-item">
+          <a class="nav-link" href="https://weibo.com/u/1907386482">Sina Weibo</a>
+        </li>
+      
     </ul>
     <hr class="hidden-md-up" />
   </div>
@@ -92,7 +99,13 @@ If you want to use any images on this website">
   <h1><a href="mailto:1044890716@qq.com" target="_blank" rel="noopener">Email Me</a></h1>
 
 <p><br></p>
-<h2>I am welcome to any commercial work. Want any nice, cool, customized images? Just <a href="mailto:1044890716@qq.com" target="_blank" rel="noopener">email me</a>.</h2>
+<h2>I am welcome to any work. Want any nice, cool, customized images for website? Just <a href="mailto:1044890716@qq.com" target="_blank" rel="noopener">email me</a>.</h2>
+
+<p><br></p>
+<h2>Event photography? Just <a href="mailto:1044890716@qq.com" target="_blank" rel="noopener">email me</a>.</h2>
+
+<p><br></p>
+<h2>Can’t wait if you want to take any portrait? Just <a href="mailto:1044890716@qq.com" target="_blank" rel="noopener">email me</a>.</h2>
 
 <p><br></p>
 <h6><i>If you want to use any images on this website for your pleasure(e.g. wallpaper), feel free to download. If you use them for any advertisement or commercially, please contact me.</i></h6>
